--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,5 +1,6 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light">
   <a class="navbar-brand" routerLink="/movies">Movies</a> 
+  <a class="navbar-brand" routerLink="/add">Add movie</a> 
 <app-search></app-search>
 </nav>
 
