--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,7 +1,18 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light">
-  <a class="navbar-brand" routerLink="/movies">Movies</a> 
-  <a class="navbar-brand" routerLink="/add">Add movie</a> 
-  <a class="navbar-brand" routerLink="/login">Login</a> 
+    <ul class="navbar-nav">
+        <li class="nav-item">
+            <a class="navbar-brand" routerLink="/movies">Movies</a> 
+        </li>
+        <li class="nav-item">
+            <a class="navbar-brand" routerLink="/add">Add movie</a> 
+        </li>
+        <li class="nav-item" *ngIf="!auth.isAuthenticated">
+              <a class="navbar-brand" routerLink="/login">Login</a> 
+        </li>
+        <li class="nav-item" *ngIf="auth.isAuthenticated">
+            <a class="navbar-brand" (click)="auth.logout()">Logout</a> 
+      </li>
+      </ul>
 
 <app-search></app-search>
 </nav>
