--- a/src/app/layout/layout.component.html
+++ b/src/app/layout/layout.component.html
@@ -1,20 +1,10 @@
 <nav class="navbar navbar-expand-xl navbar-light bg-light">
-    <ul class="navbar-nav">
-        <li class="nav-item">
             <a class="navbar-brand" routerLink="/movies">Movies</a> 
-        </li>
-        <li class="nav-item">
-            <a class="navbar-brand" routerLink="/add">Add movie</a> 
-        </li>
-        <li class="nav-item" *ngIf="!auth.isAuthenticated">
-              <a class="navbar-brand" routerLink="/login">Login</a> 
-        </li>
-        <li class="nav-item" *ngIf="auth.isAuthenticated">
-            <a class="navbar-brand" (click)="auth.logout()">Logout</a> 
-      </li>
-      </ul>
-
-<app-search></app-search>
+            <a class="navbar-brand" routerLink="/add">Add movie</a>
+            <a class="navbar-brand"  *ngIf="!auth.isAuthenticated" routerLink="/login">Login</a> 
+            <a class="navbar-brand" *ngIf="auth.isAuthenticated" (click)="auth.logout()">Logout</a> 
+            <a class="navbar-brand" *ngIf="!auth.isAuthenticated" routerLink="/register">Register</a> 
+<app-search *ngIf="auth.isAuthenticated"></app-search>
 </nav>
 
 <div class = "container">
