--- a/src/app/movies/movies.component.html
+++ b/src/app/movies/movies.component.html
@@ -5,7 +5,7 @@
     <button  class="btn btn-primary"  (click)="setOrder('duration')" [class.active]="order === 'duration'">Sort by Duration asc</button>
     <p>Trenutno je selektovano: {{ counter }} filmova</p>
    <div class="card" style="width: 18rem;" *ngFor="let movie of movies | orderBy: order: reverse | paginate: { itemsPerPage: 5, currentPage: p }" >
-  <app-movie-row (onSelect)="onSelect($event)" 
+  <app-movie-row (onSelect)="onSelect($event)" routerLink="/movies/{{movie.id}}"
    [movie]="movie" 
    [selectedAll] = "selectedAll"
    [selectedAny]="selectedAny"> </app-movie-row>
