change button after click

--- a/src/app/movies/movie-details/movie-details.component.html
+++ b/src/app/movies/movie-details/movie-details.component.html
@@ -1,3 +1,2 @@
-<app-movie-row [movie]="movie" [selectedAny]="selectedAny"></app-movie-row>
-<button (click)="goToMovies()" class="btn btn-primary">Back</button>
+<app-movie-row [movie]="movie"  [isSelected]="isSelected"></app-movie-row>
      
