--- a/src/app/shared/movie-row/movie-row.component.html
+++ b/src/app/shared/movie-row/movie-row.component.html
@@ -1,15 +1,4 @@
-  <!-- <div  class="card" style="width: 18rem;">
-  <img class="card-img-top" src="{{ movieRow.image_url }}" alt="Card image cap">
-  <div class="card-body">
-    <h5 class="card-title">{{ movieRow.name }}</h5>
-    <p class="card-text">{{ movieRow.director }}</p>
-    <p class="card-text">{{ movieRow.duration }}</p>
-    <p class="card-text">{{ movieRow.release_date }}</p>
-    <p class="card-text">{{ movieRow.genres }}</p>
-    <button (click)="select(true)" class="btn btn-primary" [disabled]="selected">Select</button>
-  </div>
-  </div> -->
-  <div  class="card" style="width: 18rem;">
+<div  class="card" style="width: 18rem;">
     <img class="card-img-top" src="{{ movie.image_url }}" alt="Card image cap">
     <div class="card-body">
       <h5 class="card-title">{{ movie.name }}</h5>
@@ -17,6 +6,12 @@
       <p class="card-text">{{ movie.duration }}</p>
       <p class="card-text">{{ movie.release_date }}</p>
       <p class="card-text">{{ movie.genres }}</p>
-      <button (click)="select(true)" class="btn btn-primary" [disabled]="selected">Select</button>
+      <div *ngIf="!selected && !isSelected">
+      <button (click)="select(true)" (click)="selected=true" class="btn btn-primary">Select</button>
+      </div>
+      <div *ngIf="isSelected">
+        <button class="btn btn-primary" (click)="goBackToMovies()" >Go back</button>
+      </div>
     </div>
   </div>
+
